# m1_backup

./: .gitignore  Percorsi.txt  README.md
Client/: FileWatcher.cpp  FileWatcher.h  Functions.h  Packets.h  SocketGuard.cpp  ThreadGuard.cpp  Thread_guard.cpp  main.cpp  myCA.key
SSLClient/: CMakeLists.txt  main.cpp
SSLServer/: CMakeLists.txt  main.cpp  myCA.pem
SerClient/: CMakeLists.txt  main.cpp
Server/: FileWatcher.cpp  Packets.h  ThreadGuardVector.cpp  dh2048.pem  main.cpp  users.db
Support/: client_paths.txt  server_paths.txt
